apps/stackrox/templates/stackrox-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stackrox
  namespace: stackrox
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: stackrox.apps.igou.systems
    http:
      paths:
      - backend:
          service:
            name: central
            port:
              name: https
        path: /
        pathType: Prefix
